rweekly highlight feature update

--- a/_posts/2020-09-26-demystifying-stat-layers-ggplot2/demystifying-stat-layers-ggplot2.html
+++ b/_posts/2020-09-26-demystifying-stat-layers-ggplot2/demystifying-stat-layers-ggplot2.html
@@ -55,7 +55,7 @@
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["demystifying-stat-layers-ggplot2_files/bowser-1.9.3/bowser.min.js","demystifying-stat-layers-ggplot2_files/distill-2.2.21/template.v2.js","demystifying-stat-layers-ggplot2_files/figure-html5/colorbar-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/explicit_args-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/pointline-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/pointrange_custom-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/simple_data_bar-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-1-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-10-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-11-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-13-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-15-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-16-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-17-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-18-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-19-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-28-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-5-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-6-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-7-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-8-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-9-1.png","demystifying-stat-layers-ggplot2_files/header-attrs-2.3/header-attrs.js","demystifying-stat-layers-ggplot2_files/jquery-1.11.3/jquery.min.js","demystifying-stat-layers-ggplot2_files/pagedtable-1.1/css/pagedtable.css","demystifying-stat-layers-ggplot2_files/pagedtable-1.1/js/pagedtable.js","demystifying-stat-layers-ggplot2_files/webcomponents-2.0.0/webcomponents.js","preview.png"]}
+  {"type":"character","attributes":{},"value":["demystifying-stat-layers-ggplot2_files/bowser-1.9.3/bowser.min.js","demystifying-stat-layers-ggplot2_files/distill-2.2.21/template.v2.js","demystifying-stat-layers-ggplot2_files/figure-html5/colorbar-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/explicit_args-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/pointline-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/pointrange_custom-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/simple_data_bar-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-1-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-10-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-11-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-13-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-15-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-16-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-17-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-18-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-19-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-28-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-5-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-6-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-7-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-8-1.png","demystifying-stat-layers-ggplot2_files/figure-html5/unnamed-chunk-9-1.png","demystifying-stat-layers-ggplot2_files/header-attrs-2.3/header-attrs.js","demystifying-stat-layers-ggplot2_files/header-attrs-2.4/header-attrs.js","demystifying-stat-layers-ggplot2_files/jquery-1.11.3/jquery.min.js","demystifying-stat-layers-ggplot2_files/pagedtable-1.1/css/pagedtable.css","demystifying-stat-layers-ggplot2_files/pagedtable-1.1/js/pagedtable.js","demystifying-stat-layers-ggplot2_files/webcomponents-2.0.0/webcomponents.js","preview.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -943,7 +943,7 @@
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="demystifying-stat-layers-ggplot2_files/header-attrs-2.3/header-attrs.js"></script>
+  <script src="demystifying-stat-layers-ggplot2_files/header-attrs-2.4/header-attrs.js"></script>
   <link href="demystifying-stat-layers-ggplot2_files/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
   <script src="demystifying-stat-layers-ggplot2_files/pagedtable-1.1/js/pagedtable.js"></script>
   <script src="demystifying-stat-layers-ggplot2_files/jquery-1.11.3/jquery.min.js"></script>
@@ -1011,6 +1011,7 @@
 <div class="layout-chunk" data-layout="l-body">
 
 </div>
+<p><em>UPDATE 10/5/20: This blog post was featured in the <a href="https://rweekly.fireside.fm/8?t=251">rweekly highlights podcast</a>! Thanks to the rweekly team for a flattering review of my tutorial!</em></p>
 <h2 id="introduction">Introduction</h2>
 <p><em>(Feel free to skip the intro section if you want to get to the point!)</em></p>
 <p>A powerful concept in the Grammar of Graphics is that variables are mapped onto <span class="sc">aesthetics</span>. In <code>{ggplot2}</code>, a class of objects called <span class="sc">geom</span> implements this idea. For example, <code>geom_point(mapping = aes(x = mass, y = height))</code> would give you a plot of <em>points</em> (i.e. a scatter plot), where the x-axis represents the <code>mass</code> variable and the y axis represents the <code>height</code> variable.</p>
@@ -1255,7 +1256,7 @@ mean_se</code></pre>
       new_data_frame(list(y = mean, ymin = mean - se, ymax = mean + 
           se), n = 1)
   }
-  &lt;bytecode: 0x0000000020392058&gt;
+  &lt;bytecode: 0x000000001f6ff4a0&gt;
   &lt;environment: namespace:ggplot2&gt;</code></pre>
 </div>
 <p>Ok, so it’s a function that takes some argument <code>x</code> and a second argument <code>mult</code> with the default value <code>1</code>.</p>
