--- a/_footer.html
+++ b/_footer.html
@@ -1,4 +1,3 @@
 <span style="font-family: 'Trispace'">
-© June Choe · Created with <a href="https://cran.r-project.org/" target="_blank" rel="noopener">
-      <i class="fab fa-r-project"></i> </a> {<a href = "https://github.com/rstudio/distill" style = "color: #24addb">distill</a>}
+© June Choe · Created with <i class="fab fa-r-project"></i> {<a href = "https://github.com/rstudio/distill" style = "color: #24addb">distill</a>}
 </span>
