--- a/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.html
+++ b/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.html
@@ -1412,6 +1412,10 @@ code span.wa { color: #545454; font-weight: bold; font-style: italic; } /* Warni
 
   <!--/radix_placeholder_distill-->
   <script src="plot-makeover-2_files/header-attrs-2.5/header-attrs.js"></script>
+  <script src="plot-makeover-2_files/clipboard-2.0.6/clipboard.min.js"></script>
+  <link href="plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.css" rel="stylesheet" />
+  <script src="plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.js"></script>
+  <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
   <script src="plot-makeover-2_files/jquery-1.11.3/jquery.min.js"></script>
   <script src="plot-makeover-2_files/anchor-4.2.2/anchor.min.js"></script>
   <script src="plot-makeover-2_files/bowser-1.9.3/bowser.min.js"></script>
