--- a/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.html
+++ b/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.html
@@ -1585,11 +1585,6 @@ The original plot for comparison:
 <span class='va'>df</span> <span class='op'>%&gt;%</span> 
   <span class='fu'>mutate</span><span class='op'>(</span>level_3 <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/numeric.html'>as.numeric</a></span><span class='op'>(</span><span class='va'>level_3</span><span class='op'>)</span><span class='op'>)</span> <span class='op'>%&gt;%</span> 
   <span class='fu'>ggplot</span><span class='op'>(</span><span class='fu'>aes</span><span class='op'>(</span>x <span class='op'>=</span> <span class='va'>level_3</span>, y <span class='op'>=</span> <span class='va'>barheight</span>, group <span class='op'>=</span> <span class='va'>level_1</span><span class='op'>)</span><span class='op'>)</span> <span class='op'>+</span>
-  <span class='fu'>geom_point</span><span class='op'>(</span>
-    <span class='fu'>aes</span><span class='op'>(</span>shape <span class='op'>=</span> <span class='va'>level_1</span><span class='op'>)</span>,
-    size <span class='op'>=</span> <span class='fl'>2</span>,
-    position <span class='op'>=</span> <span class='va'>dodge</span>
-  <span class='op'>)</span> <span class='op'>+</span> 
   <span class='fu'>geom_errorbar</span><span class='op'>(</span>
     <span class='fu'>aes</span><span class='op'>(</span>ymin <span class='op'>=</span> <span class='va'>barheight</span> <span class='op'>-</span> <span class='fl'>.05</span>, ymax <span class='op'>=</span> <span class='va'>barheight</span> <span class='op'>+</span> <span class='fl'>.05</span><span class='op'>)</span>,
     width <span class='op'>=</span> <span class='fl'>.2</span>,
@@ -1600,6 +1595,14 @@ The original plot for comparison:
     position <span class='op'>=</span> <span class='va'>dodge</span>,
     show.legend <span class='op'>=</span> <span class='cn'>FALSE</span>
   <span class='op'>)</span> <span class='op'>+</span>
+  <span class='fu'>geom_point</span><span class='op'>(</span>
+    <span class='fu'>aes</span><span class='op'>(</span>shape <span class='op'>=</span> <span class='va'>level_1</span>, fill <span class='op'>=</span> <span class='va'>level_1</span><span class='op'>)</span>,
+    size <span class='op'>=</span> <span class='fl'>1.5</span>,
+    stroke <span class='op'>=</span> <span class='fl'>.6</span>,
+    position <span class='op'>=</span> <span class='va'>dodge</span>
+  <span class='op'>)</span> <span class='op'>+</span> 
+  <span class='fu'>scale_fill_manual</span><span class='op'>(</span>values <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='st'>"black"</span>, <span class='st'>"white"</span><span class='op'>)</span><span class='op'>)</span> <span class='op'>+</span>
+  <span class='fu'>scale_shape_manual</span><span class='op'>(</span>values <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='fl'>21</span>, <span class='fl'>24</span><span class='op'>)</span><span class='op'>)</span> <span class='op'>+</span>
   <span class='fu'>facet_wrap</span><span class='op'>(</span><span class='op'>~</span> <span class='va'>level_2</span><span class='op'>)</span> <span class='op'>+</span>
   <span class='fu'>scale_x_continuous</span><span class='op'>(</span>
     breaks <span class='op'>=</span> <span class='fl'>1</span><span class='op'>:</span><span class='fl'>2</span>,
@@ -1611,10 +1614,13 @@ The original plot for comparison:
     expand <span class='op'>=</span> <span class='fu'>expansion</span><span class='op'>(</span><span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='fl'>0</span>, <span class='fl'>.1</span><span class='op'>)</span><span class='op'>)</span>
   <span class='op'>)</span> <span class='op'>+</span>
   <span class='fu'>lemon</span><span class='fu'>::</span><span class='fu'><a href='https://rdrr.io/pkg/lemon/man/coord_capped.html'>coord_capped_cart</a></span><span class='op'>(</span>left <span class='op'>=</span> <span class='st'>"both"</span><span class='op'>)</span> <span class='op'>+</span>
-  <span class='fu'>guides</span><span class='op'>(</span>shape <span class='op'>=</span> <span class='fu'>guide_legend</span><span class='op'>(</span>
+  <span class='fu'>guides</span><span class='op'>(</span>
+    fill <span class='op'>=</span> <span class='fu'>guide_none</span><span class='op'>(</span><span class='op'>)</span>,
+    shape <span class='op'>=</span> <span class='fu'>guide_legend</span><span class='op'>(</span>
       title <span class='op'>=</span> <span class='cn'>NULL</span>,
       direction <span class='op'>=</span> <span class='st'>"horizontal"</span>,
       label.theme <span class='op'>=</span> <span class='fu'>element_text</span><span class='op'>(</span>size <span class='op'>=</span> <span class='fl'>10</span>, family <span class='op'>=</span> <span class='st'>"Montserrat"</span><span class='op'>)</span>,
+      override.aes <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/list.html'>list</a></span><span class='op'>(</span>fill <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='st'>"black"</span>, <span class='st'>"white"</span><span class='op'>)</span><span class='op'>)</span>
     <span class='op'>)</span>
   <span class='op'>)</span> <span class='op'>+</span>
   <span class='fu'>labs</span><span class='op'>(</span>
@@ -1633,7 +1639,6 @@ The original plot for comparison:
     axis.title.y <span class='op'>=</span> <span class='fu'>element_text</span><span class='op'>(</span>vjust <span class='op'>=</span> <span class='fl'>5</span><span class='op'>)</span>,
     plot.background <span class='op'>=</span> <span class='fu'>element_blank</span><span class='op'>(</span><span class='op'>)</span>,
     panel.grid.major.y <span class='op'>=</span> <span class='fu'>element_blank</span><span class='op'>(</span><span class='op'>)</span>
-    
   <span class='op'>)</span>
 </code></pre>
 </div>
