--- a/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.html
+++ b/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.html
@@ -123,7 +123,7 @@ code span.wa { color: #545454; font-weight: bold; font-style: italic; } /* Warni
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["biblio.bib","plot-makeover-2_files/anchor-4.2.2/anchor.min.js","plot-makeover-2_files/bowser-1.9.3/bowser.min.js","plot-makeover-2_files/clipboard-2.0.6/clipboard.min.js","plot-makeover-2_files/distill-2.2.21/template.v2.js","plot-makeover-2_files/figure-html5/final-1.png","plot-makeover-2_files/figure-html5/first-draft-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-1-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-2-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-2-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-3-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-3-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-4-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-4-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-5-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-6-1.png","plot-makeover-2_files/header-attrs-2.5/header-attrs.js","plot-makeover-2_files/jquery-1.11.3/jquery.min.js","plot-makeover-2_files/webcomponents-2.0.0/webcomponents.js","plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.css","plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.js","plot.png"]}
+  {"type":"character","attributes":{},"value":["biblio.bib","plot-makeover-2_files/anchor-4.2.2/anchor.min.js","plot-makeover-2_files/bowser-1.9.3/bowser.min.js","plot-makeover-2_files/clipboard-2.0.6/clipboard.min.js","plot-makeover-2_files/distill-2.2.21/template.v2.js","plot-makeover-2_files/figure-html5/final-1.png","plot-makeover-2_files/figure-html5/first-draft-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-1-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-2-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-2-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-3-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-3-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-4-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-4-2.png","plot-makeover-2_files/figure-html5/unnamed-chunk-5-1.png","plot-makeover-2_files/figure-html5/unnamed-chunk-6-1.png","plot-makeover-2_files/header-attrs-2.5/header-attrs.js","plot-makeover-2_files/jquery-1.11.3/jquery.min.js","plot-makeover-2_files/panelset-0.2.3/panelset.css","plot-makeover-2_files/panelset-0.2.3/panelset.js","plot-makeover-2_files/webcomponents-2.0.0/webcomponents.js","plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.css","plot-makeover-2_files/xaringanExtra-clipboard-0.2.3/xaringanExtra-clipboard.js","plot.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1514,7 +1514,7 @@ Figure 1: Plot from Yurovsky and Yu (2008)
 <section id="plot" class="panel-name panel">
 <h2 class="panel-name">Plot</h2>
 <div class="layout-chunk" data-layout="l-body">
-<p><img src="plot-makeover-2_files/figure-html5/first-draft-1.png" width="624" /></p>
+<p><img src="plot-makeover-2_files/figure-html5/first-draft-1.png" width="624" style="display: block; margin: auto;" /></p>
 </div>
 </section>
 <section id="code" class="panel-name panel">
