--- a/_custom.html
+++ b/_custom.html
@@ -1,5 +1,5 @@
 <div class="sidebar-section custom">
   <img src="static/img/profile.png" width="200" style="display:block; padding-bottom: 20px">
   <h3><a href="about.html">About Me</a></h3>
-  <span>I am a (computational) psycholinguist interested in modeling how comprehenders parse linguistic input, particularly those that contain structural ambiguities. In my spare time, I blog about <a href="visualizations.html">data visualization</a> and #rstats.</span>
+  <span>I am a (computational) psycholinguist interested in modeling how comprehenders parse linguistic input, particularly those that contain structural ambiguities. In my spare time, I blog about data visualization and #rstats.</span>
 </div>
