--- a/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.html
+++ b/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.html
@@ -2185,8 +2185,9 @@ Plot Code
 <h3 id="icon-fonts">Icon fonts</h3>
 <p>If this blog post was your first time encountering icon fonts in R, you probably have a lot of questions right now about using them in data visualizations. You can check out my <strong>lightning talk on icon fonts</strong> that I gave at <a href="https://www.rladiesphilly.org/">RLadies Philly</a> for a quick overview as well as some tips &amp; tricks!</p>
 <br>
-<p style='color:red; text-align:center; font-weight:bold;'>
-<p>To be updated with link to the talk!</strong> <br></p>
+<p style="color:red; text-align:center; font-weight:bold;">
+To be updated with link to the talk!
+</p>
 <p>Some extra stuff not mentioned in the talk:</p>
 <ul>
 <li><p><code>{ragg}</code> supports colored fonts like emojis, which also means that it can render <strong>colored icon fonts</strong>.<a href="#fn20" class="footnote-ref" id="fnref20" role="doc-noteref"><sup>20</sup></a> Icons don’t often come in colors, but one example is Google’s <a href="https://fonts.google.com/icons">Material Icons</a> font (<a href="https://github.com/google/material-design-icons/blob/master/LICENSE">Apache 2.0 license</a>), which has a <a href="https://fonts.google.com/icons?selected=Material+Icons+Two+Tone">Two Tone</a> style where icons have a grey fill in addition to a black stroke:<a href="#fn21" class="footnote-ref" id="fnref21" role="doc-noteref"><sup>21</sup></a></p>
