--- a/_footer.html
+++ b/_footer.html
@@ -1,3 +1,3 @@
-<span style="font-family: 'Chillax'">
+<span style="font-family: 'Open Sans'">
 June Choe | Created with {<a href = "https://github.com/rstudio/distill" style = "color: #24addb">distill</a>}
 </span>
