--- a/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.html
+++ b/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.html
@@ -1581,7 +1581,7 @@ role="doc-noteref"><sup>1</sup></a> At a high level, it involves the
 non-trivial task of unifying the <em>graphics device</em>, the
 <em>operating system</em>, and <em>text rendering</em>, (and also in our
 case, R!) to seamlessly work with each other.</p>
-<p>Luckily for us in 2021, we have an amazing solution to this problem
+<p>Luckily for us in post-2021, we have an amazing solution to this problem
 thanks to recent developments in the <code>{ragg}</code>,
 <code>{systemfonts}</code>, and <code>{textshaping}</code> packages by
 RStudio. This is great news because a lot of the work for getting custom
